--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
+    "sequelize": "^6.37.3",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
